--- a/views/welcome.ejs
+++ b/views/welcome.ejs
@@ -2,7 +2,7 @@
     
 
 
-<body bgcolor="#E6E6FA">
+<body >
         <!-- <video width="320" height="240" controls>
                 <source src="movie.mp4" type="video/mp4">
               </video> -->
